<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#51C5D81B"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="398dp"
        android:layout_height="715dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="#B41BD8B2"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/labelapp"
            android:textColor="@color/judul"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="8"
                    android:hint="@string/nama_depan"
                    android:inputType="textPersonName"
                    android:textColor="@color/txt" />

                <EditText
                    android:id="@+id/editUN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/nama_belakang"
                    android:inputType="textPersonName"
                    android:textColor="@color/txt" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/edit6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="8"
                    android:hint="@string/tempat_lahir"
                    android:inputType="textPersonName"
                    android:textColor="@color/txt" />

                <EditText
                    android:id="@+id/editPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/Tanggal_lahir"
                    android:inputType="textPersonName"
                    android:textColor="@color/txt" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">


            </TableRow>

            <EditText
                android:id="@+id/edit5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:hint="@string/alamat"
                android:inputType="textPersonName"
                android:textColor="@color/txt" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:text="Jenis Kelamin"
                android:textSize="18sp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="11"
                    android:text="Laki Laki"
                    android:textColor="@color/txt" />

                <RadioButton
                    android:id="@+id/edit7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="Perempuan"
                    android:textColor="@color/txt" />

            </TableRow>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:text="Agama"
                android:textSize="18sp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/edit14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="11"
                    android:text="Islam"
                    android:textColor="@color/txt" />

                <RadioButton
                    android:id="@+id/edit15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="Kristen"
                    android:textColor="@color/txt" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/edit16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="11"
                    android:text="Katolik"
                    android:textColor="@color/txt" />

                <RadioButton
                    android:id="@+id/edit17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="Hindu"
                    android:textColor="@color/txt" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/edit18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="11"
                    android:text="Buddha"
                    android:textColor="@color/txt" />

                <RadioButton
                    android:id="@+id/edit13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="Konghucu"
                    android:textColor="@color/txt" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/edit12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="11"
                    android:text="Aliran Kepercayaan"
                    android:textColor="@color/txt" />

            </TableRow>

            <EditText
                android:id="@+id/edit1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:hint="@string/as"
                android:inputType="text|phone"
                android:textColor="@color/txt" />

            <EditText
                android:id="@+id/edit19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:hint="@string/ad"
                android:inputType="textPersonName"
                android:textColor="@color/txt" />

            <EditText
                android:id="@+id/edit20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:hint="@string/ps"
                android:inputType="textPassword"
                android:textColor="@color/txt" />

            <EditText
                android:id="@+id/edit21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:hint="@string/aa"
                android:inputType="textPassword"
                android:textColor="@color/txt" />

        </TableLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>